--- a/book.bib
+++ b/book.bib
@@ -17,3 +17,10 @@
   year = {2013},
   url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003118},
 }
+
+@article{ghoshvogt2012,
+  title = {Outliers: An Evaluation of Methodologies},
+  author = {Ghosh, D., Vogt, A.},
+  year = {2012},
+  url = {http://www.asasrms.org/Proceedings/y2012/Files/304068_72402.pdf},
+}
