--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -158,7 +158,7 @@ colnames(annot)
 
 #access to the names of genes in UCSC format
 geneIDs <- annot$UCSC_RefGene_Name
-genesIDs <- as.character(unlist(genesIDs))
+genesIDs <- as.character(unlist(geneIDs))
 
 selAPP <- grep("APP;APP",genesIDs)
 length(selAPP)
