--- a/packages.bib
+++ b/packages.bib
@@ -1,3 +1,11 @@
+@Manual{R-AnnotationDbi,
+  title = {AnnotationDbi: Manipulation of SQLite-based annotations in Bioconductor},
+  author = {Hervé Pagès and Marc Carlson and Seth Falcon and Nianhua Li},
+  year = {2022},
+  note = {R package version 1.58.0},
+  url = {https://bioconductor.org/packages/AnnotationDbi},
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -29,6 +37,13 @@
   year = {2022},
   note = {R package version 1.30.3},
   url = {https://github.com/Bioconductor/BiocParallel},
+}
+
+@Manual{R-biomaRt,
+  title = {biomaRt: Interface to BioMart databases (i.e. Ensembl)},
+  author = {Steffen Durinck and Wolfgang Huber},
+  year = {2022},
+  note = {R package version 2.52.0},
 }
 
 @Manual{R-Biostrings,
@@ -73,6 +88,13 @@ PostScript) and Display (X11 and Win32) Output},
   url = {http://www.rforge.net/Cairo/},
 }
 
+@Manual{R-clusterProfiler,
+  title = {clusterProfiler: A universal enrichment tool for interpreting omics data},
+  author = {Guangchuang Yu},
+  year = {2022},
+  note = {https://yulab-smu.top/biomedical-knowledge-mining-book/ (docs)},
+}
+
 @Manual{R-data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
@@ -94,6 +116,14 @@ PostScript) and Display (X11 and Win32) Output},
   year = {2023},
   note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-enrichplot,
+  title = {enrichplot: Visualization of Functional Enrichment Result},
+  author = {Guangchuang Yu},
+  year = {2022},
+  note = {R package version 1.16.2},
+  url = {https://yulab-smu.top/biomedical-knowledge-mining-book/},
 }
 
 @Manual{R-fastICA,
@@ -183,6 +213,13 @@ ggplot2},
   year = {2017},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=gridExtra},
+}
+
+@Manual{R-IlluminaHumanMethylation450kanno.ilmn12.hg19,
+  title = {IlluminaHumanMethylation450kanno.ilmn12.hg19: Annotation for Illumina's 450k methylation arrays},
+  author = {Kasper Daniel Hansen},
+  year = {2021},
+  note = {R package version 0.6.1},
 }
 
 @Manual{R-illuminaio,
@@ -404,6 +441,13 @@ Estimation},
   year = {2019},
   note = {R package version 2016.8-1.1},
   url = {http://optimizer.r-forge.r-project.org/},
+}
+
+@Manual{R-org.Hs.eg.db,
+  title = {org.Hs.eg.db: Genome wide annotation for Human},
+  author = {Marc Carlson},
+  year = {2022},
+  note = {R package version 3.15.0},
 }
 
 @Manual{R-plyr,
@@ -638,6 +682,24 @@ Ordered Observations)},
   url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
 }
 
+@Article{biomaRt2009,
+  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
+  author = {Steffen Durinck and Paul T. Spellman and Ewan Birney and Wolfgang Huber},
+  journal = {Nature Protocols},
+  year = {2009},
+  volume = {4},
+  pages = {1184--1191},
+}
+
+@Article{biomaRt2005,
+  title = {BioMart and Bioconductor: a powerful link between biological databases and microarray data analysis},
+  author = {Steffen Durinck and Yves Moreau and Arek Kasprzyk and Sean Davis and Bart {De Moor} and Alvis Brazma and Wolfgang Huber},
+  journal = {Bioinformatics},
+  year = {2005},
+  volume = {21},
+  pages = {3439--3440},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -670,6 +732,29 @@ Ordered Observations)},
   pages = {1363--1369},
   doi = {10.1093/bioinformatics/btu049},
   pubmed = {24478339},
+}
+
+@Article{clusterProfiler2021,
+  title = {clusterProfiler 4.0: A universal enrichment tool for interpreting omics data},
+  author = {Tianzhi Wu and Erqiang Hu and Shuangbin Xu and Meijun Chen and Pingfan Guo and Zehan Dai and Tingze Feng and Lang Zhou and Wenli Tang and Li Zhan and xiaochong Fu and Shanshan Liu and Xiaochen Bo and Guangchuang Yu},
+  journal = {The Innovation},
+  year = {2021},
+  volume = {2},
+  number = {3},
+  pages = {100141},
+  doi = {10.1016/j.xinn.2021.100141},
+}
+
+@Article{clusterProfiler2012,
+  title = {clusterProfiler: an R package for comparing biological themes among gene clusters},
+  author = {Guangchuang Yu and Li-Gen Wang and Yanyan Han and Qing-Yu He},
+  journal = {OMICS: A Journal of Integrative Biology},
+  year = {2012},
+  volume = {16},
+  number = {5},
+  pages = {284-287},
+  pmid = {22455463},
+  doi = {10.1089/omi.2011.0118},
 }
 
 @Article{gdsfmt2012,
