--- a/packages.bib
+++ b/packages.bib
@@ -31,6 +31,14 @@
   url = {https://bioconductor.org/packages/BiocGenerics},
 }
 
+@Manual{R-BiocManager,
+  title = {BiocManager: Access the Bioconductor Project Package Repository},
+  author = {Martin Morgan},
+  year = {2022},
+  note = {R package version 1.30.19},
+  url = {https://CRAN.R-project.org/package=BiocManager},
+}
+
 @Manual{R-BiocParallel,
   title = {BiocParallel: Bioconductor facilities for parallel evaluation},
   author = {Martin Morgan and Jiefei Wang and Valerie Obenchain and Michel Lang and Ryan Thompson and Nitesh Turaga},
